[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analysis"
authors = [
    {name = "Krystal Lin", email = "krystal.lin.work@gmail.com"},
]
description = "Analysis Python package"
version = "0.1.0"
dependencies = ["matplotlib", "numpy", "logging", "yaml", "pytest"]
requires-python = ">=3.10.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
